✅ Fix `UnsupportedOperationException` on `JpaRepository.save()`
<https://stackoverflow.com/questions/7428089/unsupportedoperationexception-merge-saving-many-to-many-relation-with-hibernate>