@@ -13,6 +13,7 @@ import edu.ncsu.csc.itrust2.repositories.OfficeVisitRepository;
 import java.time.LocalDate;
 import java.time.ZonedDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 import javax.transaction.Transactional;
 
 import lombok.RequiredArgsConstructor;
@@ -105,7 +106,10 @@ public class OfficeVisitService extends Service {
 
         // associate all diagnoses with this visit
         if (ovf.getDiagnoses() != null) {
-            ov.setDiagnoses(ovf.getDiagnoses().stream().map(diagnosisService::build).toList());
+            ov.setDiagnoses(
+                    ovf.getDiagnoses().stream()
+                            .map(diagnosisService::build)
+                            .collect(Collectors.toList()));
             for (final Diagnosis d : ov.getDiagnoses()) {
                 d.setVisit(ov);
             }
@@ -115,7 +119,8 @@ public class OfficeVisitService extends Service {
 
         final List<PrescriptionForm> ps = ovf.getPrescriptions();
         if (ps != null) {
-            ov.setPrescriptions(ps.stream().map(prescriptionService::build).toList());
+            ov.setPrescriptions(
+                    ps.stream().map(prescriptionService::build).collect(Collectors.toList()));
         }
 
         final Patient p = (Patient) ov.getPatient();
